--- a/proyectos.html
+++ b/proyectos.html
@@ -27,8 +27,8 @@
                     <a href="#"><i class="fa-solid fa-toggle-on" id="toggleDark"></i></a>
                 </div>
                 <div class="nav-lang">
-                    <img src="./img/spain.png" onclick="languageChange('es')" alt="Spanish flag">
-                    <img src="./img/united-kingdom.png" onclick="languageChange('en')" alt="English Flag">
+                    <img src="./img/spain.png" onclick="languageChange_project('es')" alt="Spanish flag">
+                    <img src="./img/united-kingdom.png" onclick="languageChange_project('en')" alt="English Flag">
                 </div>
             </nav>
            
